model and scraper

--- a/notebook/clean.ipynb
+++ b/notebook/clean.ipynb
@@ -1752,9 +1752,88 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-07-29 08:28:53,637 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-07-29 08:28:53,644 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"vehicles\")\n",
+      "2024-07-29 08:28:53,645 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,647 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"vehicles\")\n",
+      "2024-07-29 08:28:53,647 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,649 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' AND name NOT LIKE 'sqlite~_%' ESCAPE '~' ORDER BY name\n",
+      "2024-07-29 08:28:53,650 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,651 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='view' AND name NOT LIKE 'sqlite~_%' ESCAPE '~' ORDER BY name\n",
+      "2024-07-29 08:28:53,651 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,653 INFO sqlalchemy.engine.Engine PRAGMA main.table_xinfo(\"vehicles\")\n",
+      "2024-07-29 08:28:53,653 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,655 INFO sqlalchemy.engine.Engine SELECT sql FROM  (SELECT * FROM sqlite_master UNION ALL   SELECT * FROM sqlite_temp_master) WHERE name = ? AND type in ('table', 'view')\n",
+      "2024-07-29 08:28:53,655 INFO sqlalchemy.engine.Engine [raw sql] ('vehicles',)\n",
+      "2024-07-29 08:28:53,656 INFO sqlalchemy.engine.Engine PRAGMA main.foreign_key_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,657 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,658 INFO sqlalchemy.engine.Engine PRAGMA temp.foreign_key_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,659 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,660 INFO sqlalchemy.engine.Engine SELECT sql FROM  (SELECT * FROM sqlite_master UNION ALL   SELECT * FROM sqlite_temp_master) WHERE name = ? AND type in ('table', 'view')\n",
+      "2024-07-29 08:28:53,662 INFO sqlalchemy.engine.Engine [raw sql] ('vehicles',)\n",
+      "2024-07-29 08:28:53,664 INFO sqlalchemy.engine.Engine PRAGMA main.index_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,664 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,665 INFO sqlalchemy.engine.Engine PRAGMA temp.index_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,666 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,667 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"vehicles\")\n",
+      "2024-07-29 08:28:53,668 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,669 INFO sqlalchemy.engine.Engine PRAGMA main.index_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,669 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,670 INFO sqlalchemy.engine.Engine PRAGMA temp.index_list(\"vehicles\")\n",
+      "2024-07-29 08:28:53,670 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,671 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"vehicles\")\n",
+      "2024-07-29 08:28:53,671 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2024-07-29 08:28:53,672 INFO sqlalchemy.engine.Engine SELECT sql FROM  (SELECT * FROM sqlite_master UNION ALL   SELECT * FROM sqlite_temp_master) WHERE name = ? AND type in ('table', 'view')\n",
+      "2024-07-29 08:28:53,673 INFO sqlalchemy.engine.Engine [raw sql] ('vehicles',)\n",
+      "2024-07-29 08:28:53,677 INFO sqlalchemy.engine.Engine \n",
+      "DROP TABLE vehicles\n",
+      "2024-07-29 08:28:53,678 INFO sqlalchemy.engine.Engine [no key 0.00077s] ()\n",
+      "2024-07-29 08:28:53,690 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE vehicles (\n",
+      "\t\"Name\" TEXT, \n",
+      "\t\"Automaker\" TEXT, \n",
+      "\t\"Location\" TEXT, \n",
+      "\t\"Year\" BIGINT, \n",
+      "\t\"Kilometers_Driven\" BIGINT, \n",
+      "\t\"Fuel_Type\" TEXT, \n",
+      "\t\"Transmission\" TEXT, \n",
+      "\t\"Owner_Type\" TEXT, \n",
+      "\t\"Mileage(kmpl)\" FLOAT, \n",
+      "\t\"Engine (CC)\" BIGINT, \n",
+      "\t\"Power (bhp)\" FLOAT, \n",
+      "\t\"Seats\" FLOAT, \n",
+      "\t\"Price\" FLOAT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2024-07-29 08:28:53,691 INFO sqlalchemy.engine.Engine [no key 0.00114s] ()\n",
+      "2024-07-29 08:28:53,758 INFO sqlalchemy.engine.Engine INSERT INTO vehicles (\"Name\", \"Automaker\", \"Location\", \"Year\", \"Kilometers_Driven\", \"Fuel_Type\", \"Transmission\", \"Owner_Type\", \"Mileage(kmpl)\", \"Engine (CC)\", \"Power (bhp)\", \"Seats\", \"Price\") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2024-07-29 08:28:53,759 INFO sqlalchemy.engine.Engine [generated in 0.04657s] [('Maruti Wagon R LXI CNG', 'Maruti', 'Mumbai', 2010, 72000, 'CNG', 'Manual', 'First', 37.24, 998, 58.16, 5.0, 1.75), ('Hyundai Creta 1.6 CRDi SX Option', 'Hyundai', 'Pune', 2015, 41000, 'Diesel', 'Manual', 'First', 19.67, 1582, 126.2, 5.0, 12.5), ('Honda Jazz V', 'Honda', 'Chennai', 2011, 46000, 'Petrol', 'Manual', 'First', 18.2, 1199, 88.7, 5.0, 4.5), ('Maruti Ertiga VDI', 'Maruti', 'Chennai', 2012, 87000, 'Diesel', 'Manual', 'First', 20.77, 1248, 88.76, 7.0, 6.0), ('Audi A4 New 2.0 TDI Multitronic', 'Audi', 'Coimbatore', 2013, 40670, 'Diesel', 'Automatic', 'Second', 15.2, 1968, 140.8, 5.0, 17.74), ('Hyundai EON LPG Era Plus Option', 'Hyundai', 'Hyderabad', 2012, 75000, 'LPG', 'Manual', 'First', 29.54, 814, 55.2, 5.0, 2.35), ('Nissan Micra Diesel XV', 'Nissan', 'Jaipur', 2013, 86999, 'Diesel', 'Manual', 'First', 23.08, 1461, 63.1, 5.0, 3.5), ('Toyota Innova Crysta 2.8 GX AT 8S', 'Toyota', 'Mumbai', 2016, 36000, 'Diesel', 'Automatic', 'First', 11.36, 2755, 171.5, 8.0, 17.5)  ... displaying 10 of 6019 total bound parameter sets ...  ('Maruti Wagon R VXI', 'Maruti', 'Kolkata', 2013, 46000, 'Petrol', 'Manual', 'First', 18.9, 998, 67.1, 5.0, 2.65), ('Chevrolet Beat Diesel', 'Chevrolet', 'Hyderabad', 2011, 47000, 'Diesel', 'Manual', 'First', 25.44, 936, 57.6, 5.0, 2.5)]\n",
+      "2024-07-29 08:28:53,775 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6019"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.to_csv('data/processed/train-data-cleaned.csv', index=False)"
+    "df.to_csv('data/processed/train-data-cleaned.csv', index=False)\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('sqlite:///src/db/vehicles.db', echo=True)\n",
+    "df.to_sql('vehicles', con=engine, if_exists='replace', index=False)"
    ]
   }
  ],
